# praxis

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  NOTICE  README.md  THIRD_PARTY_NOTICES  docker-compose.yml  entrypoint.sh
cli/: Cargo.toml  SKILL.md
cli/src/: acp.rs  app.rs  client.rs  clipboard.rs  config.rs  event.rs  interactive.rs  intercept_live.rs  keymap.rs  main.rs  markdown.rs  mcp.rs  output.rs  prompt.rs  session_store.rs  spinner.rs  state.rs  text_selection.rs
cli/src/app/: agent_scripts.rs  chain_form.rs  forms.rs  help.rs  input.rs  intercept.rs  log_query.rs  mouse.rs  mouse_overlay.rs  nodes.rs  operations.rs  orchestrator.rs  popups.rs  settings.rs
cli/src/app/intercept/: body.rs  match_detail.rs  rules_form.rs
cli/src/app/log_query/: autocomplete.rs  editor.rs  schema.rs
cli/src/app/settings/: intercept_target_form.rs  model_form.rs
cli/src/commands/: agent.rs  chain.rs  config.rs  intercept.rs  mod.rs  node.rs  op.rs  orchestrate.rs  recon.rs  sdk.rs  session.rs  traffic.rs
cli/src/ui/: chain_form.rs  chrome.rs  common.rs  filter_bar.rs  form_modal.rs  help.rs  hint_row.rs  hits.rs  list_detail.rs  mod.rs  nodes.rs  operations.rs  orchestrator.rs  overlay_hits.rs  popup.rs  recon.rs  settings.rs  status_bar.rs  theme.rs
cli/src/ui/intercept/: form.rs  hints.rs  log.rs  matches.rs  mod.rs  rule_form.rs  rules.rs  search_bar.rs
cli/src/ui/log_query/: autocomplete.rs  detail.rs  editor.rs  mod.rs  results.rs  schema.rs
cli/src/ui/nodes/: detail.rs  list.rs  mod.rs  session.rs  sessions_list.rs  terminal.rs
cli/src/ui/operations/: executions.rs  library.rs  mod.rs  new_op_form.rs  triggers.rs
cli/src/ui/recon/: config_tab.rs  sessions_tab.rs  tools_tab.rs  tree.rs
cli/src/ui/settings/: about.rs  agents.rs  forms.rs  intercept.rs  intercept_target_form.rs  llm.rs  mod.rs  service.rs
common/: Cargo.toml
common/src/: acp_ext.rs  clear_epoch.rs  client_transport.rs  id.rs  intercept_match.rs  lib.rs  log_query_schema.rs  logging.rs  messaging.rs  remote_nodes.rs
common/src/ai/: client.rs  mod.rs  models.rs  output.rs  parsing.rs  prompts.rs  provider.rs  types.rs
common/src/ai/providers/: anthropic.rs  gemini.rs  mod.rs  openai.rs
common/src/config/: file_config.rs  mod.rs
common/src/mcp/: client.rs  frame.rs  mod.rs  ops.rs  params.rs  server.rs
common/src/prompts/: task_completion.prompt  tool_calling.prompt
common/src/sdk_protocol/: mod.rs
common/tests/: log_query_schema_sync.rs
node/: Cargo.toml  build.rs
node/assets/: LICENSE-WINTUN-PREBUILT
node/src/: main.rs  runtime.rs
node/src/acp/: client.rs  mod.rs  types.rs
node/src/acp_server/: extensions.rs  file_ops.rs  handlers.rs  mod.rs  sessions.rs
node/src/agent_connectors/: factory.rs  mod.rs  registry.rs  traits.rs  utils.rs
node/src/agent_connectors/dummy/: fingerprint.rs  mod.rs  (+1 more)
node/src/app/: mod.rs  node_state.rs  registration.rs
node/src/handlers/: agent_handler.rs  config_handler.rs  discovery_handler.rs  intercept_handler.rs  lua_agent_handler.rs  mod.rs  registry_handler.rs  session_handler.rs  terminal_handler.rs
node/src/intercept/: agent_discovery.rs  certificate.rs  dns_resolver.rs  env_vars.rs  hosts.rs  lifecycle.rs  listen_policy.rs  mod.rs  packet_engine.rs  proxy.rs  routing.rs  state.rs  system_proxy.rs  tproxy.rs  tproxy_mode.rs  tun_device.rs  tun_linux.rs  vpn_mode.rs  wintun.rs
node/src/runtime/: forwarders.rs  info.rs
node/src/terminal/: mod.rs  output.rs  session.rs
node/src/utils/: lock.rs  mcp.rs  mod.rs  process.rs  semantic_parser.rs  system.rs  ui_automation.rs
node/tiny_c/: .gitignore  Makefile  README.md
node/tiny_c/src/: amqp.c  conn.c  conn.h  http.c  json.c  main.c  praxis.c  tiny.h  util.c
semantic_parser/: Cargo.toml  LICENSE  README.md
semantic_parser/examples/: basic.rs  typed.rs
semantic_parser/src/: config.rs  lib.rs  parser.rs
service/: Cargo.toml  build.rs
service/src/: acp_node_proxy.rs  acp_server.rs  banner.rs  builtin_intercept_targets.rs  conversions.rs  lib.rs  main.rs  mcp.rs  messaging.rs  orchestrator.rs  trigger_engine.rs
service/src/agent_chat/: database.rs  mod.rs  parser.rs
service/src/claude_bridge/: ccrv1.rs  ccrv2.rs  mod.rs  session.rs  tls.rs  transport.rs
service/src/config/: service_config.rs
service/src/database/: chain_executions.rs  chain_memories.rs  chain_payloads.rs  chain_triggers.rs  chains.rs  config.rs  definitions.rs  discovered_endpoints.rs  event_log.rs  exec.rs  intercept_targets.rs  lua_agent_scripts.rs  mod.rs  operations.rs  queries.rs  recon.rs  remote_nodes.rs  rules.rs  rules_snapshot.rs  service_config.rs  toolkit_actions.rs  traffic.rs  transactions.rs
service/src/dispatch/: client.rs  intercept_processing.rs  mod.rs  node.rs  traffic_barrier.rs  traffic_broadcast.rs  traffic_queries.rs
service/src/doc_helper/: mod.rs  retrieval.rs
service/src/handlers/: client_message_handler.rs  mod.rs  node_message_handler.rs
service/src/hunting/: executor.rs  mod.rs  sql.rs  tables.rs
service/src/intercept_targets/: default_intercept_targets.toml  mod.rs
service/src/log_query/: executor.rs  mod.rs  sql.rs  tables.rs
service/src/prompts/: doc_helper.prompt  orchestrator.prompt  semantic_op_agent.prompt
service/src/remote_nodes/: codex.rs  mod.rs
service/src/sdk_server/: handler.rs  mod.rs  session.rs
service/src/semantic_helpers/: mod.rs  semantic_parser.rs  traffic_summarizer.rs
service/src/semantic_ops/: executor.rs  manager.rs  mod.rs
service/src/state/: mod.rs  registries.rs
service/src/tools/: message_encoder.rs  mod.rs  session_poisoning.prompt  session_poisoning.rs
web/: Cargo.toml  build.rs
web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
web/frontend/src/: App.tsx  index.css  main.tsx
web/src/: acp.rs  lib.rs  main.rs  messages.rs  orchestrator.rs  rabbitmq.rs  state.rs  websocket.rs
web/src/prompts/: orchestrator.prompt
web/src/state/: chains.rs  commands.rs  config.rs  connections.rs  operations.rs  traffic.rs
web/src/websocket/: handlers.rs
(+237 files in other folders)
