[package]
name = "praxis_cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Praxis CLI - terminal interface for the Praxis C2 framework"

[[bin]]
name = "praxis_cli"
path = "src/main.rs"

[dependencies]
common = { package = "praxis_common", path = "../common" }
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_close", "unstable_session_model", "unstable_session_usage"] }
tokio-util = { version = "0.7", features = ["compat"] }
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
lapin = "2.5"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
futures-util = "0.3"
async-trait = "0.1"
dirs = "5"
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
vt100 = "0.15"
tempfile = "3"
