[package]
name = "praxis_common"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared types and utilities for the Praxis framework"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
regex = "1.10"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-core = "0.3"
futures-util = "0.3"
async-stream = "0.3"
indexmap = { version = "2.0", features = ["serde"] }
lapin = "2.5"
tokio = { version = "1", features = ["sync", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
tracing = "0.1"
rmcp = { version = "0.8", features = ["server", "transport-io", "transport-sse-server", "schemars"] }
schemars = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
agent-client-protocol = { version = "0.10.4", features = ["unstable_session_close", "unstable_session_model", "unstable_session_usage"] }

[lib]
name = "common"
path = "src/lib.rs"
