[package]
name = "praxis_service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Praxis orchestration service - manages operations, nodes, and AI-driven automation"

[lib]
name = "praxis_service"
path = "src/lib.rs"

[[bin]]
name = "praxis_service"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
common = { path = "../common" }
semantic_parser = { path = "../semantic_parser" }
tokio = { version = "1", features = ["full"] }
lapin = "2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "json"] }
regex = "1"
dirs = "5.0"
hostname = "0.4"
rmcp = { version = "0.8", features = ["server", "transport-sse-server", "client", "transport-sse-client-reqwest", "schemars"] }
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
nom = "7"
similar = "2.6"
axum = { version = "0.8", features = ["ws"] }
