[package]
name = "praxis_service"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Praxis orchestration service - manages operations, nodes, and AI-driven automation"

[lib]
name = "praxis_service"
path = "src/lib.rs"

[[bin]]
name = "praxis_service"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
common = { package = "praxis_common", path = "../common" }
semantic_parser = { path = "../semantic_parser" }
tokio = { version = "1", features = ["full"] }
lapin = "4.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2.0", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures-util = "0.3"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "json"] }
regex = "1"
dirs = "6.0"
hostname = "0.4"
rmcp = { version = "1", features = ["server", "transport-streamable-http-server", "client", "transport-streamable-http-client-reqwest", "schemars"] }
async-trait = "0.1"
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
tokio-util = { version = "0.7", features = ["rt"] }
base64 = "0.22"
nom = "8"
similar = "3"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
agent-client-protocol = { version = "0.11", features = ["unstable_session_close", "unstable_session_model", "unstable_session_usage"] }
